bug fix spacing home again

--- a/front/src/components/Home/RecentMentors/styles.scss
+++ b/front/src/components/Home/RecentMentors/styles.scss
@@ -17,7 +17,7 @@
   }
 
   &-container {
-    padding: v.$gutter;
+    padding: 0 v.$gutter v.$gutter v.$gutter;
     padding-bottom: 4rem;
   }
 
